--- a/Practice-code/color.html
+++ b/Practice-code/color.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>color in bootstrap</title>
@@ -10,21 +10,21 @@
       integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB"
       crossorigin="anonymous"
     />
-  </head>
-  <style>
-    :root{
-        purple:
-    }
-  </style>
-  <body class="bg-body ">
-    <p class="text-primary">
-        this word willl be pink color
-    </p>
+</head>
+<body class="bg-secondary">
+    <p class="bg-primary">primary</p>
+    <p class="bg-secondary">secondary</p>
+    <p class="bg-success">success</p>
+    <p class="bg-danger">danger</p>
+    <p class="bg-warning">warning</p>
+    <p class="bg-info">info</p>
+    <p class="bg-light">light</p>
+    <p class="bg-dark text-white">dark</p>
     <!-- script -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
       crossorigin="anonymous"
     ></script>
-  </body>
+</body>
 </html>
