--- a/Exercise/card.html
+++ b/Exercise/card.html
@@ -13,25 +13,23 @@
     />
 </head>
 <body>
-    <div class="container my-5">
-  <div class="row justify-content-center">
-    <div class="col-sm-10 col-md-6 col-lg-4">
-      <!-- Card -->
-      <div class="border border-3 border-primary rounded-4 p-4 p-md-5 m-3 shadow-sm bg-light">
-        <!-- Card Header / Title -->
-        <h3 class="mb-3 fw-bold text-primary">Pro Bootstrap Card</h3>
-        
-        <!-- Card Body -->
-        <p class="mb-4">
-          This is a master-level card demonstrating responsive padding, margin, border thickness, color, rounded corners, and shadow for a professional look.
-        </p>
-        
-        <!-- Button -->
-        <a href="#" class="btn btn-primary px-4 py-2 rounded-pill">Learn More</a>
-      </div>
+    <nav class="navbar navbar-expand-lg bg-light">
+  <div class="container">
+    <a class="navbar-brand" href="#">MySite</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navMenu">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navMenu">
+      <ul class="navbar-nav ms-auto">
+        <li class="nav-item"><a class="nav-link active" href="#">Home</a></li>
+        <li class="nav-item"><a class="nav-link" href="#">About</a></li>
+        <li class="nav-item"><a class="nav-link" href="#">Services</a></li>
+        <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
+      </ul>
     </div>
   </div>
-</div>
+</nav>
 
 
 
